Updated examples to add card from right menu to rgl

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "jest-cli": "^22.3.0",
     "lint-staged": "^6.1.0",
     "lodash": "^4.17.5",
+    "office-ui-fabric-react": "^6.25.1",
     "opener": "^1.4.3",
     "prettier": "^1.10.2",
     "react": "^16.2.0",
